--- a/src/pages/censeur-profil/censeur-profil.scss
+++ b/src/pages/censeur-profil/censeur-profil.scss
@@ -18,28 +18,21 @@ page-censeur-profil {
     .profile-image-placeholder {
       display: inline-block;
 
-      background-color: #eee;
+      background-color: #0c5373;
       width: 96px;
       height: 96px;
       border-radius: 50%;
 
       font-size: 12px;
 
-      ion-icon {
+      #avatar {
         font-size: 44px;
         margin-bottom: -10px;
-        margin-top: 10px;
+        margin-top: 20px;
+        color: #eee;
       }
     }
   }
-  
-	ion-toolbar
-   {
-	    ion-title
-	    {
-	      text-align: center;
-	    }
-    
-  	}
 
+	
 }
