--- a/src/pages/parent-sign-in/parent-sign-in.scss
+++ b/src/pages/parent-sign-in/parent-sign-in.scss
@@ -1,8 +1,8 @@
 page-parent-sign-in {
 	.slide-image {
-	    max-height: 10%;
-	    max-width: 40%;
-	    margin: 10px 0 0 30%;
+		max-height: 50%;
+		max-width: 50%;
+		margin: 0 0 0 30%;
 	 }
 
 
