--- a/src/pages/censeur-login/censeur-login.scss
+++ b/src/pages/censeur-login/censeur-login.scss
@@ -1,33 +1,89 @@
 page-censeur-login {
-	.slide-image {
-	    max-height: 50%;
-	    max-width: 50%;
-	    margin: 0 0 0 30%;
-	 }
+	// .slide-image {
+	//     max-height: 50%;
+	//     max-width: 50%;
+	//     margin: 0 0 0 30%;
+	//  }
 
-	 .list
-	 {
-	 	ion-input
-	 	{
-	 		border-bottom: 1px solid gray;
-	 		text-align: center;
-	 	}
-	 }
+	//  .list
+	//  {
+	//  	ion-input
+	//  	{
+	//  		border-bottom: 1px solid gray;
+	//  		text-align: center;
+	//  	}
+	//  }
 
 
-	 a
-	 {
-	 	text-decoration: lowercase;
-	 }
+	//  a
+	//  {
+	//  	text-decoration: lowercase;
+	//  }
 
-	 .footer
-	 {
-	 	text-align: center;
-	 }
+	//  .footer
+	//  {
+	//  	text-align: center;
+	//  }
 
-	 .contentLoginPage
-	 {
-	 	background-color: #fff;
-	 }
+	//  .contentLoginPage
+	//  {
+	//  	background-color: #fff;
+	//  }
+
+	ion-content {
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+		border-color: transparent;
+	  }
+	  .scroll-content {
+		background-image: radial-gradient(center center, ellipse cover, #ffeda3, #ffc800);
+		display: flex;
+		flex-direction: column;
+		overflow: hidden;
+	  }
+	  .logo {
+		width: 50%;
+		height: auto;
+		max-width: 12em;
+		margin: 0 auto;
+		padding-bottom: 50px;
+	  }
+	  .no-border {
+		border-bottom: 0 !important;
+		box-shadow: none !important;
+	  }
+	  ion-row {
+		align-items: center;
+		text-align: center;
+	  }
+	  @media only screen and (min-width: 768px) {
+		ion-col.col {
+		  margin: 0 auto;
+		  max-width: 40%;
+		}
+	  }
+	  span {
+		color: white;
+	  }
+	  ion-item {
+		// border-radius: 30px !important;
+		padding-left: 10px !important;
+		margin-bottom: 10px;
+		background-color: #f6f6f6;
+		opacity: 0.7;
+		font-size: 0.9em;
+	  }
+	  ion-list {
+		margin: 0;
+	  }
+	  .login-button {
+		width: 100%;
+		// border-radius: 30px;
+		font-size: 0.9em;
+		// border: 1px solid #fff;
+		background-color: #39acdc;
+	  }
+	
 
 }
