--- a/src/pages/parent-notification/parent-notification.scss
+++ b/src/pages/parent-notification/parent-notification.scss
@@ -4,14 +4,11 @@ page-parent-notification {
 		text-align: center;
 		margin-top: 45%;
 	}
+}
 
-	ion-toolbar
-	  {
-	    ion-title
-	    {
-	      text-align: center;
-	    }
-	    
-	  }
-
+ion-modal.inset-modal {
+	// transparent black background overlay
+	background-color: rgba(0, 0, 0, .5) !important;
+	transition: opacity .25s ease-in-out;
+	padding: 10vh 5vw;
 }
