Modification faute et du css du toast controller

--- a/src/pages/parent-enfant/parent-enfant.scss
+++ b/src/pages/parent-enfant/parent-enfant.scss
@@ -10,8 +10,11 @@ page-parent-enfant {
 
 }
 
-.toastSuccess
+.toastsucesscss
 {
-    background-color: green;
+    > div{
+        background-color:#69b37f!important;
+    }
+    color: #eee;
 }
 
